Add HVDC lines to fb-crac-importer
Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>